attempt to return calculation

--- a/templates/aline.html
+++ b/templates/aline.html
@@ -6,10 +6,13 @@
       <input type="number" id="length" name="length" value="" placeholder="skirt length" required="not required" autofocus="autofocus"  />
       <label for="waist">Waist measurement: </label>
       <input type="number" id="waist" name="waist" value="" placeholder="Waist measurement" required="required" autofocus="autofocus"  />
-      <label for="length">Hip measurement: </label>
-      <input type="text" id="hip" name="hip" value="" placeholder="hip size" required="not required" />
+      <label for="hip">Hip measurement: </label>
+      <input type="text" id="hip" name="hip" value="" placeholder="hip measurement" required="not required" />
       <label for="waist_hip_distance">Distance from waist to hip: </label>
       <input type="number" id="waist_hip_distance" name="waist_hip_distance" value="" placeholder="distance from waist to hip" required="not required" />
       <input type="submit" value= "Submit" id="submit button" />
     </form>
 </div>
+
+<div id= "pattern">
+  <p>"pattern_waist"</p>
