--- a/templates/aline.html
+++ b/templates/aline.html
@@ -1,7 +1,7 @@
 <p>A-Line Skirt Calculator</p>
 <div id="submit-location">
     <h1> Enter your details so that we can work out your pattern </h1>
-    <form method="post" action="/submit">
+    <form method="post" action="/alineresult">
       <label for="length">Skirt Length (use table as a guide if you are unable to measure): </label>
       <input type="number" id="length" name="length" value="" placeholder="skirt length" required="not required" autofocus="autofocus"  />
       <label for="waist">Waist measurement: </label>
