--- a/templates/aline.html
+++ b/templates/aline.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html>
+<body>
+
 <p>A-Line Skirt Calculator</p>
 <div id="submit-location">
     <h1> Enter your details so that we can work out your pattern </h1>
@@ -17,3 +21,5 @@
 <div id= "pattern">
   <p>Waist: {{pattern_waist}}</p>
 </div>
+</body>
+</html>
