--- a/templates/alineresult.html
+++ b/templates/alineresult.html
@@ -1,3 +1,8 @@
-<div id= "pattern">
+<!DOCTYPE html>
+<html>
+<body>
+  <div id= "pattern">
   <p>Waist: {{pattern_waist}}</p>
 </div>
+</body>
+</html>
