--- a/templates/aline.html
+++ b/templates/aline.html
@@ -20,6 +20,8 @@
 
 <div id= "pattern">
   <p>Waist: {{pattern_waist}}</p>
+  <p>Distance between waist and hips: {{pattern_waist_hip_distance}}</p>
+  <p>Hips: {{pattern_hip}}</p>
 </div>
 </body>
 </html>
