rectified some html

--- a/templates/aline.html
+++ b/templates/aline.html
@@ -64,7 +64,7 @@ h2 {
 <div id="getmeasurements">
     <h2> Enter your details so that we can work out a  free pattern for your a-line skirt </h2>
     <form method="post" action="/calculators/alineresult">
-     <p> <label for="length">Skirt Length (use table as a guide if you are unable to measure): </label>
+     <p> <label for="length">Skirt Length (measure from waist to where you want to hem it): </label>
       <input type="number" id="length" name="length" value="" placeholder="skirt length" required="not required" autofocus="autofocus"  /></p>
       <p><label for="waist">Waist measurement: </label>
       <input type="number" id="waist" name="waist" value="" placeholder="Waist measurement" required="required" autofocus="autofocus"  /></p>
